Bug 868625 - DeviceStorage: addNamed() crashes when invoked from an inline activity. r=khuey, a=leo+